--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --runInBand"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": ["<rootDir>/setup-jest.ts"]
   },
   "private": true,
   "dependencies": {
@@ -29,13 +35,12 @@
     "@angular/cli": "^16.1.8",
     "@angular/compiler-cli": "^16.1.8",
     "@types/jasmine": "~3.10.0",
+    "@types/jest": "^29.5.3",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "jest": "^29.6.3",
+    "jest-preset-angular": "^13.1.1",
     "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.9.5"
   }
 }
