--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "concurrently --kill-others \"ng serve -o\" \"json-server --watch db/db.json\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
@@ -39,6 +39,7 @@
     "@types/jasmine": "~3.10.0",
     "@types/jest": "^29.5.3",
     "@types/node": "^12.11.1",
+    "concurrently": "^8.2.1",
     "jasmine-core": "~4.0.0",
     "jest": "^29.6.3",
     "jest-preset-angular": "^13.1.1",
