--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@angular/platform-browser": "^16.1.8",
     "@angular/platform-browser-dynamic": "^16.1.8",
     "@angular/router": "^16.1.8",
+    "@ngrx/effects": "^16.2.0",
+    "@ngrx/router-store": "^16.2.0",
+    "@ngrx/store": "^16.2.0",
+    "@ngrx/store-devtools": "^16.2.0",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "rxjs": "~7.5.0",
